In progress for type inference. Looks like other code is breaking, and i dont understand why

--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -573,7 +573,7 @@ The resultant value of a divide operation has width equal to the width of the di
 \[
 \begin{array}{rll}
 \kws{primop} & \kws{Resultant Type} & \kws{Resultant Width} \\
-\kws{mod}(   \pds{op1}, \pds{op2}) & UInt|SInt & width(op1)|width(op2) - 1  \\
+\kws{mod}(   \pds{op1}, \pds{op2}) &   UInt & width(op1)|width(op2) - 1  \\
 \kws{mod-uu}(\pds{op1}, \pds{op2}) &   UInt & width(op2)     \\
 \kws{mod-us}(\pds{op1}, \pds{op2}) &   UInt & width(op2) - 1?  \\
 \kws{mod-su}(\pds{op1}, \pds{op2}) &   UInt & width(op2)     \\
