Finished infer-types pass

--- a/TODO
+++ b/TODO
@@ -3,6 +3,8 @@ TODO
    Figure out how types and widths propogate for all updated primops
    Write infer-types pass
    Remove letrec. Add to expressions: Register(input,en), ReadPort(mem,index,enable), WritePort(mem,index,enable)
+   Add bit-reduce-and etc to primops
+   Write pass to rename identifiers (alpha-transform)
    Update spec
       change concrete syntactical names of structural elements
       change direction names for bundle fields
