--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -576,8 +576,8 @@ The resultant value of a divide operation has width equal to the width of the di
 \kws{mod}(   \pds{op1}, \pds{op2}) &   UInt & width(op1)|width(op2) - 1  \\
 \kws{mod-uu}(\pds{op1}, \pds{op2}) &   UInt & width(op2)     \\
 \kws{mod-us}(\pds{op1}, \pds{op2}) &   UInt & width(op2) - 1?  \\
-\kws{mod-su}(\pds{op1}, \pds{op2}) &   UInt & width(op2)     \\
-\kws{mod-ss}(\pds{op1}, \pds{op2}) &   UInt & width(op2) - 1?  \\
+\kws{mod-su}(\pds{op1}, \pds{op2}) &   SInt & width(op2)     \\
+\kws{mod-ss}(\pds{op1}, \pds{op2}) &   SInt & width(op2) - 1?  \\
 \end{array}
 \]
 
