Finished first two parts of expand-whens pass. Fixed inits by adding WRegInit and removing Null and initialize-register pass

--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
-
 TODO 
+   when calculating writeenables, use assignment
+   when calculating read enables, scan list
+   change parser to use <> syntax (and update all tests)
+
    Figure out how widths propogate for all updated primops (Adam)
    Remove letrec. Add to expressions: Register(input,en), ReadPort(mem,index,enable), WritePort(mem,index,enable) (Patrick)
    Add bit-reduce-and etc to primops (Jonathan)
@@ -26,6 +29,9 @@ TODO
       What is lowered form? What is it for?
 
 
+Checks:
+   Subfields are only on bundles, before type inference 
+   after adding dynamic assertions, insert bounds check with accessor expansion
 
 Tests:
    Error if declare anything other than module in circuit
