Learned to fork.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+Patrick Learned how to Fork.
+
 TODO 
    Change parser to use <> syntax (and update all tests) (patrick)
    Think about on-reset, add it
