--- a/TODO
+++ b/TODO
@@ -1,10 +1,14 @@
-Patrick Learned how to Fork.
+Passes:
+- To-Real-IR
++ Inline Modules
++ Remove Nested Expressions
++ Flo
 
 TODO 
+   Change all primops to be strict on data widths
    Change parser to use <> syntax (and update all tests) (patrick)
    Think about on-reset, add it
    Think about expanding mems, more complicated than first glance! Change DefMem to be size, and element type
-   Think about max(op1,op2) for muxes.
    Make instances always male, flip the bundles on declaration
    Talk to palmer/patrick about how writing passes is going to be supported
    Add asserts, printf to spec
